fixed spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -607,7 +607,7 @@ select:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 /* Create A Post */
